@@ -6,6 +6,8 @@ Comment binseg_normal.cpp to explain optimal_cost computation.
 
 Use C++ multiset with operator< instead of multimap/vector.
 
+Use C++ vector/array to avoid repeated code/computations.
+
 2020.9.15
 
 remove unused C++ errors.
